--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 
 <th:block th:replace="/common/header"></th:block>
 
+<!-- test -->
 <body>
 <th:block th:replace="/common/menu"></th:block>
 <div class="hero_area">
